Korrekturen im Methodenteil

--- a/Methode.tex
+++ b/Methode.tex
@@ -4,16 +4,16 @@ Zur Bearbeitung der Fragestellung wurde im Umfang dieser Arbeit ein firmenintern
 
 \section{Material \& Testaufbau}
 
-Für die Tests wurde das \textsl{motion cycle 200med} der Firma \textsl{Emotion Fitness} genutzt, welches seriell mit einem Laptop und der \acs{CCPS} verbunden wird. Zur Abklärung der kardialen Gesundheit wurde der \textsl{cardioscan cs-3 effect} genutzt. Dies ist das firmeneigene MPG-zertifiziert Medizingerät zur Erstellung von Ruhe-Elektrokardiogrammen (\acs{EKG}) mittels tetrapolarer Klebe-Elektroden, mit dem die \ac{HF} in Ruhe und der \ac{CSI} erhoben werden. Für alle Tests wurde ein kalibriertes Modell des metabolicscan genutzt. Die Respirationsmessung erfolgt beim metaboliscan durch eine Atemeinheit, welches über ein Kabel und einen Probenschlauch mit der Haupteinheit des Gerätes verbunden ist. Dieses sowie der Laptop und der cs-3 effect stehen darum auf einem Tisch in unmittelbarer Nähe zum Ergometer. Die Atemeinheit wird vor jeder Messung mit einem unbenutzten antibakteriellen Polypropylen-Filter des Herstellers \textsl{GVS} und einem dazugehörigen flexiblen Elastomer-Mundstück versehen. Jenes dient der Möglichkeit, das Atemmodul mit der Kiefermuskulatur festzuhalten, sodass die Hände während einer Messung am Ergometer bleiben können.
+Für die Tests wurde das \textsl{motion cycle 200med} der Firma \textsl{Emotion Fitness} genutzt, welches seriell mit einem Laptop und der \acs{CCPS} verbunden wird. Zur Abklärung der kardialen Gesundheit wurde der \textsl{cardioscan cs-3 effect} genutzt. Dies ist das firmeneigene MPG-zertifiziert Gerät zur Erstellung von Ruhe-Elektrokardiogrammen (\acs{EKG}) mittels vier Klebe-Elektroden, mit dem die \ac{HF} in Ruhe und der \ac{CSI} erhoben werden. Für alle Tests wurde ein kalibriertes Modell des metabolicscan genutzt. Die Respirationsmessung erfolgt beim metaboliscan durch eine Atemeinheit, welches über ein Kabel und einen Probenschlauch mit der Analyseeinheit des Gerätes verbunden ist. Dieses sowie der Laptop und der cs-3 effect stehen darum auf einem Tisch in unmittelbarer Nähe zum Ergometer. Die Atemeinheit wird vor jeder Messung mit einem unbenutzten antibakteriellen Polypropylen-Filter des Herstellers \textsl{GVS} und einem dazugehörigen flexiblen Elastomer-Mundstück versehen. Jenes dient der Möglichkeit, das Atemmodul mit der Kiefermuskulatur festzuhalten, sodass die Hände während einer Messung am Ergometer bleiben können.
 
 \subsection{Funktionsweise des metabolicscan}
 
-Der metabolicscan besteht aus zwei Modulen: dem Atemmodul und der Haupteinheit. Im Atemmodul des metabolicscan ist ein Flowsensor\footnote{Technische Daten: siehe Anhang A} verbaut. Dieser misst in direkter Nähe zum Mund die Strömungsgeschwindigkeit der Inspirations- bzw. Exspirationsluft in einem Bereich von $\pm$\SI{300}{S\litre\per\minute} mit einer Abtastrate von einer Millisekunde. Mithilfe einer mathematischen Integration über der Zeit wird anschließend das Strömungsvolumen berechnet. \acs{O2}- und \acs{CO2}-Sensor\footnote{Technische Daten: siehe Anhang B} sind in der separaten Haupteinheit implementiert. Sie bilden ein optimal aufeinander abgestimmtes Modul und müssen daher für die Messung nicht zeitlich synchronisiert werden. Ein Anteil der Luft wird am Ende des Flowsensors über den Probenschlauch durch die integrierte Pumpe des \acs{CO2}-Sensors angesaugt. Die Funktion des \acs{CO2}-Sensors basiert auf Messung der Infrarotlichtabsorption durch \acs{CO2}, die im Spektralbereich von \SIrange{4,2}{4,3}{\micro\metre} besonders stark ist. Er eignet sich für eine \ac{AF} bis zu \SI{150}{\per\minute}, was ausreicht, da diese bei einer Spiroergometrie selten höher als \SI{60}{\per\minute} ansteigt~\cite{Hollmann.2006}. Anschließend wird die angesaugte Luft zum galvanischen \acs{O2}-Sensor geleitet. Dieser hat im Konzentrationsbereich von 0 bis 40 \% eine Genauigkeit von $\pm$~ (1~ \%\textsubscript{abs} + 1 \%\textsubscript{rel}), solange die \acs{AF} \SI{60}{\per\minute} nicht überschreitet.
+Der metabolicscan besteht aus zwei Modulen: dem Atemmodul und der Analyseeinheit. Im Atemmodul des metabolicscan ist ein Flowsensor\footnote{Technische Daten: siehe Anhang A} verbaut. Dieser misst in direkter Nähe zum Mund die Strömungsgeschwindigkeit der Inspirations- bzw. Exspirationsluft in einem Bereich von $\pm$\SI{300}{S\litre\per\minute} mit einer Abtastrate von einer Millisekunde. Mithilfe einer mathematischen Integration über der Zeit wird anschließend das Strömungsvolumen berechnet. \acs{O2}- und \acs{CO2}-Sensor\footnote{Technische Daten: siehe Anhang B} sind in der separaten Analyseeinheit implementiert. Sie bilden ein optimal aufeinander abgestimmtes Modul und müssen daher für die Messung nicht zeitlich synchronisiert werden. Ein Anteil der Luft wird am Ende des Flowsensors über den Probenschlauch durch die integrierte Pumpe des \acs{CO2}-Sensors angesaugt. Die Funktion des \acs{CO2}-Sensors basiert auf Messung der Infrarotlichtabsorption durch \acs{CO2}, die im Spektralbereich von \SIrange{4,2}{4,3}{\micro\metre} besonders stark ist. Er eignet sich für eine \ac{AF} bis zu \SI{150}{\per\minute}, was ausreicht, da diese bei einer Spiroergometrie selten höher als \SI{60}{\per\minute} ansteigt~\cite{Hollmann.2006}. Anschließend wird die angesaugte Luft zum galvanischen \acs{O2}-Sensor geleitet. Dieser hat im Konzentrationsbereich von 0 bis 40 \% eine Genauigkeit von $\pm$~ (1~ \%\textsubscript{abs} + 1 \%\textsubscript{rel}), solange die \acs{AF} \SI{60}{\per\minute} nicht überschreitet.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=100mm]{Bilder/mbs.jpg}
-	\caption[metabolicscan: Haupteinheit, Atemmodul, Filter und Mundstück]{metabolicscan: Haupteinheit (rechts), Atemmodul (oben links), Filter (unten links) und Mundstück (blau)}
+	\caption[metabolicscan: Analyseeinheit, Atemmodul, Filter und Mundstück]{metabolicscan: Analyseeinheit (rechts), Atemmodul (oben links), Filter (unten links) und Mundstück (blau)}
 	\label{pic:pic9}
 \end{figure}
 
@@ -99,40 +99,33 @@ Nach Vorbereitung einer Person wurde vor der Belastungsphase noch eine Referenzm
 \subsection{Belastungsphase}
 
 Während der Belastungsphase wurden die Probanden stetig unterstützt, indem ihnen das Mundstück gereicht und regelmäßig der momentane Zustand sowie die Belastungseinschätzung erfragt wurden. Außerdem wurde die Trittfrequenz überprüft und bei Bedarf daran erinnert, diese einzuhalten. Es wurde vor allem darauf geachtet, dass die Probanden rechtzeitig das Mundstück zur Hand hatten, um die Atemmessung durchzuführen. Die Software-Oberfläche der \acs{CCPS} zeigt während der Messung einen Timer an, welcher angibt, ab wann die nächste Messung gestartet wird. Zur korrekten Messwerterfassung war daher stets darauf zu achten, dass spätestens bei Ablauf des Timers das Mundstück vollständig im Mund war. Damit der gesamte Atem eines Probanden die Sensoren erreicht, muss zusätzlich vorher eine Nasenklammer aufgesetzt werden, um den ansonsten unkontrollierbar einsetzenden Teilvolumenstrom durch die Nase zu blockieren.
-
+%
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=90mm]{Bilder/proband.jpg}
 	\caption{Proband während der Spiroergometrie}
 	\label{pic:pic11}
 \end{figure}
-
-Abb. \ref{pic:pic11} zeigt beispielhaft eine Messung mit einem männlichen Probanden. Darauf zu erkennen sind das verwendete Fahrradergometer, das Atemmodul, der Filter, das Mundstück und die Nasenklammer. Grundsätzlich war es den Probanden freigestellt, ob sie das Mundstück mit der Hand halten oder mit dem Kiefer. Eventuelle Auswirkungen des Handlings auf die Durchführung oder Ergebnisse werden in dieser Arbeit nicht behandelt.\\
-In Abb. \ref{pic:pic12} ist die Oberfläche der \acs{CCPS} zu sehen, wie sie während einer Spiroergometrie auf dem Laptop dargestellt ist. Der Bildausschnitt zeigt die Graphen und Messwerte sowie den besagten Timer (oben in schwarzer Schrift) innerhalb eines Interfaces. Der obere rechte Plot zeigt die aktuell gemessene Durchflussrate des Flowsensors. Ist diese >0, handelt es sich um eine Exspiration. Bei Werten <0 ist die Inspiration betroffen.
-
+%
+Abb. \ref{pic:pic11} zeigt beispielhaft einen männlichen Probanden während einer Spiroergometrie. Zu erkennen sind das verwendete Fahrradergometer, das Atemmodul, der Filter, das Mundstück und die Nasenklammer. Grundsätzlich war es den Probanden freigestellt, ob sie das Mundstück mit der Hand halten oder mit dem Kiefer. Eventuelle Auswirkungen des Handlings auf die Durchführung oder Ergebnisse werden in dieser Arbeit nicht behandelt.\\
+In Abb. \ref{pic:pic12} ist die Oberfläche der \acs{CCPS} zu sehen, wie sie während einer Spiroergometrie auf dem Laptop dargestellt ist. Der Bildausschnitt zeigt die Graphen und Messwerte sowie den besagten Timer (oben in schwarzer Schrift) innerhalb eines Interfaces. Der obere rechte Plot zeigt die aktuell gemessene Durchflussrate des Flowsensors. Ist diese >0, handelt es sich um eine Exspiration, bei Werten <0 um eine Inspiration.
+%
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{Bilder/sw_screen.png}
-	\caption[Software-Oberfläche während einer Spiroergometrie]{Beispielhafte Darstellung der \acs{CCPS}-Oberfläche während einer Spiroergometrie}
+	\caption[Beispielhafte Software-Oberfläche während einer Spiroergometrie]{Beispielhafte Darstellung der \acs{CCPS}-Oberfläche während einer Spiroergometrie mit drei Plots. Oben links: Grafische Verlaufsdarstellung mehrerer Messwerte über die Belastungsstufen; Oben rechts: Darstellung des gemessenen Flows in \si{\litre\per\second}; Unten rechts: Prozentual gemessene \acs{O2}- (blau) und \acs{CO2}-Konzentration (grün)}
 	\label{pic:pic12}
 \end{figure}
-
-Unten rechts ist mit drei Sekunden Latenz ein Plot mit den \acs{O2}- und \acs{CO2}-Konzentrationen eines Atemzugs eingebunden. Der blaue Graph stellt die \acs{O2}-, der grüne die \acs{CO2}-Konzentration dar. Das große Fenster links oben bildet eine Verlaufsdarstellung bestimmter Parameter ab, die innerhalb einer Stufe gemittelt wurden. Anhand der X-Achse des Koordinatensystems sind Stufennummerierungen zu erkennen. Die Y-Achse ist mehrfach definiert und unterschiedlich skaliert. Dargestellt werden in verschiedenen Farben die pro Stufe ermittelten Durchschnittswerte für die \acs{VO2} (blau), den Puls bzw. die \acs{HF} (braun) und den \acs{RQ} (türkis) in Form eines Graphen sowie die während einer Stufe eingestellten Belastungsintensitäten als Balkendiagramm (hellblau). Durch einen roten Graphen wird auch die Steigerung der Intensität zu Stufenbeginn mit einem zeitlichen Bezug angedeutet. Unterhalb des Plots werden die Durchschnittswerte für besagte Parameter visualisiert, die bei der zuletzt abgeschlossenen Stufe durch die Software ausgewertet wurden. Außerdem werden im unteren Abschnitt des hellblauen Interfaces die während des letzten erkannten Atemzugs berechneten Werte für die \ac{VO2}, \ac{VCO2}, das \ac{AMV} und die \ac{AF} mitgeschrieben. Außerdem wird die vom Pulsgurt, via Ergometer an die Software übermittelte \ac{HF} angezeigt. Mithilfe dieses Interfaces konnte der Verlauf der Spiroergometrie überwacht und verfolgt werden. Der Timer half bei der korrekten Durchführung der Atemzugerfassung und die Graphen gaben Aufschluss darüber, ob diese korrekt funktionierte. Die Rohdaten der Sensoren wurden im Hintergrund aufgezeichnet, in \acs{CSV}-Dateien abgespeichert und konnten anschließend mit MATLAB ausgewertet werden.
+%
+Unten rechts ist mit drei Sekunden Latenz ein Plot mit den \acs{O2}- und \acs{CO2}-Konzentrationen eines Atemzugs eingebunden. Der blaue Graph stellt die \acs{O2}-, der grüne die \acs{CO2}-Konzentration dar. Das große Fenster links oben bildet eine Verlaufsdarstellung mit Mittelwerten bestimmter Parameter ab. Anhand der X-Achse des Koordinatensystems sind Stufennummerierungen zu erkennen. Auf der linken Y-Achse sind die Belastung in \si{\watt} und die \acs{VO2} in \si{\litre\per\minute} und auf der rechten der Puls bzw. die \acs{HF} in \si{\per\minute} und der \acs{RQ} definiert. Im Plot sind in verschiedenen Farben sind die pro Stufe ermittelten Mittelwerte für die \acs{VO2} (blau), den Puls (braun) und den \acs{RQ} (türkis) in Form eines Graphen sowie die während einer Stufe eingestellten Belastungsintensitäten als Balkendiagramm (hellblau). Unterhalb des Plots werden die Durchschnittswerte für besagte Parameter visualisiert, die bei der zuletzt abgeschlossenen Stufe durch die Software ausgewertet wurden. Außerdem werden im unteren Abschnitt des hellblauen Interfaces die während des letzten erkannten Atemzugs berechneten Werte für die \ac{VO2}, \ac{VCO2}, das \ac{AMV} und die \ac{AF} mitgeschrieben. Des Weiteren wird die vom Pulsgurt, via Ergometer an die Software übermittelte \ac{HF} angezeigt. Mithilfe dieses Interfaces konnte der Verlauf der Spiroergometrie überwacht und verfolgt werden. Der Timer half bei der korrekten Durchführung der Atemzugerfassung und die Graphen gaben Aufschluss darüber, ob diese korrekt funktionierte. Die Rohdaten der Sensoren wurden im Hintergrund aufgezeichnet, in \acs{CSV}-Dateien abgespeichert und konnten anschließend mit MATLAB ausgewertet werden.
 
 \section{Datenverarbeitung \& Generierung der Plots}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=55mm]{Bilder/breathdata.png}
-	\caption[Rohdaten des metabolicscan]{Bildausschnitt einer Beispiel-CSV-Datei mit Rohdaten des metabolicscan}
-	\label{pic:pic14}
-\end{figure}
-
-In Abb. \ref{pic:pic14} ist ein Ausschnitt des Anfangs einer CSV-Textdatei zu sehen, die nach Abschluss einer Messung durch die \acs{CCPS} gespeichert wurde. Die Messwerte des \acs{O2}-, \acs{CO2}- und Flowsensors werden von links nach rechts in drei durch Semikolons getrennten Spalten gespeichert. Die Datenmenge war je nach Gesamtdauer einer Leistungsdiagnostik unterschiedlich groß und manche Dateien bestanden aus Zeilen im fünfstelligen Bereich. Durch ein MATLAB-Skript wurden die Sensor-Rohdaten eingelesen und zur weiteren Verarbeitung vorbereitet. Anschließend durchliefen die Daten ein Unterprogramm, mit denen die einzelnen Atemzüge anhand des Flows identifiziert wurden. Das Ventilationsmuster eines Menschen ist allerdings sehr individuell und enthält häufig Artefakte, beispielsweise wenn die Atmung beim Schluckreflex unterbrochen wird. Rechen-Filter sorgten deshalb dafür, dass ein Flow-Intervall erst dann als ein neuer Atemzug gespeichert wurde, wenn bestimmte Schwellwerte überschritten wurden. Weitere Funktionen dienten der Zuordnung der entsprechenden \acs{O2}- und \acs{CO2}-Werte zu einem Atemzug, da die Sensoren diese erst nach ca. drei Sekunden Verzögerung liefern. Mit diesen Atemzugwerten wurde anschließend ein Mittelwert für jede bewältigte Belastungsstufe `{a} \SI{2}{\minute} berechnet. Die Mittelwerte wurden anschließend in mehreren Bezugssystemen grafisch aufgetragen. Am Ende der Ausführung des MATLAB-Skriptes wurden die Graphen für V-Slope, \acs{EQO2}/\acs{EQCO2}, \acs{VE}/\acs{VCO2}, \acs{RQ}, \acs{VE}/\acs{W} und \acs{VO2}/\acs{W} sowie eine übersichtliche und vereinfachte 6-Felder-Grafik als Bild-Dateien gespeichert. 
+Mithilfe mehrerer MATLAB-Skripte wurden die Sensor-Rohdaten automatisiert eingelesen und zur weiteren Verarbeitung vorbereitet. Anschließend wurden die einzelnen Atemzüge anhand des Flows detektiert, für jede Belastungsstufe gemittelt und in eine Ausgabematrix geschrieben. Anhand dieser wurden die Mittelwerte in mehreren Bezugssystemen grafisch aufgetragen. Am Ende der Ausführung der MATLAB-Skripte wurden die Graphen für V-Slope, \acs{EQO2}/\acs{EQCO2}, \acs{VE}/\acs{VCO2}, \acs{RQ}, \acs{VE}/\acs{W} und \acs{VO2}/\acs{W} sowie eine übersichtliche und vereinfachte 6-Felder-Grafik als Bild-Dateien gespeichert. 
 
 \section{Auswertung \& Referenzierung der Ergebnisse}
 
-Schlussendlich wurden alle Plots zunächst subjektiv ausgewertet und die ventilatorischen Schwellen händisch bestimmt. Dabei wurden die Grafiken auf in Kapitel 1.2.2 genannte Indikatoren für die Schwellen analysiert. Da in der klinischen Spiroergometrie zumeist nach dem Mehr-Augen-Prinzip ausgewertet wird, analysierte unabhängig eine zweite Person die Ergebnisse, deren Ansichten in dieser Arbeit als Referenz dienen. Da cardioscan die Schwellenbestimmung auch in Zukunft automatisiert durch die Software durchführen lassen möchte, wurde das MATLAB-Programm durch Algorithmen für die automatische Auswertung der Graphen erweitert und als dritte Instanz hinzugefügt. Als Referenz für die Ergebnisse der Software dienten die Erkenntnisse der HUNT 3 Fitnessstudie von Loe et al. aus dem Jahre 2014~\cite{Loe.2014}. Im Zuge einer algorithmischen Schwellenbestimmung wurden die Ergebnisse durch die Software mit diesen Daten verglichen und auf Plausibilität überprüft. Die HUNT 3 Studie wurde zwar auf Laufbändern durchgeführt und beide Schwellen wurden ausschließlich mit der V-Slope-Methode bestimmt, jedoch bestand sie aus einer breit gefächerten Teilnehmergruppe mit 4631 Probanden. Daher bezeichnen Loe et al. ihre Erkenntnisse als größte europäische Referenzdaten-Sammlung für kardiorespiratorische Werte bei gesunden Männern und Frauen. Die Ergebnisse galt es anschließend zu vergleichen und auf Übereinstimmungen bzw. Differenzen zu analysieren.
+Schlussendlich wurden alle Plots zunächst subjektiv ausgewertet und die ventilatorischen Schwellen händisch bestimmt. Dabei wurden die Grafiken auf in Kapitel 1.2.2 genannte Indikatoren für die Schwellen analysiert. Da in der klinischen Spiroergometrie zumeist nach dem Mehr-Augen-Prinzip ausgewertet wird, analysierte unabhängig eine zweite Person die Ergebnisse, deren Ansichten in dieser Arbeit als Referenz dienen. Da cardioscan die Schwellenbestimmung auch in Zukunft automatisiert durch die Software durchführen lassen möchte, wurde das MATLAB-Programm durch Algorithmen für die automatische Auswertung der Graphen erweitert und als dritte Instanz hinzugefügt. Als Referenz für die Ergebnisse der Software dienten die Erkenntnisse der HUNT 3 Fitnessstudie von Loe et al. aus dem Jahre 2014~\cite{Loe.2014}. Im Zuge einer algorithmischen Schwellenbestimmung wurden die Ergebnisse durch die Software mit diesen Daten verglichen und auf Plausibilität überprüft. Die HUNT 3 Studie wurde zwar auf Laufbändern durchgeführt und beide Schwellen wurden ausschließlich mit der V-Slope-Methode bestimmt, jedoch bestand sie aus einer breit gefächerten Teilnehmergruppe mit 4631 Probanden. Daher bezeichnen Loe et al. ihre Erkenntnisse als größte europäische Referenzdaten-Sammlung für kardiorespiratorische Werte bei gesunden Männern und Frauen. Die Ergebnisse wurden anschließend verglichen und auf Übereinstimmungen bzw. Differenzen analysiert.
 
 \section{Probandendaten}
 
@@ -140,7 +133,7 @@ Tab. \ref{tab:tabelle3} listet die Probanden-Daten Geschlecht, Gewicht in \si{\k
 
 \begin{table}[H]
 	\centering
-	\caption{Daten und Eigenschaften der getesteten Probanden}
+	\caption{Probandendaten}
 	\medskip
 	\begin{tabulary}{\textwidth}{L C C C C C C}
 		\toprule
